--- a/contracts/package.json
+++ b/contracts/package.json
@@ -5,7 +5,8 @@
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.4",
-    "ethers": "^5.6.9"
+    "ethers": "^5.6.9",
+    "hardhat": "^2.10.2"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.6.0",
