--- a/application/package.json
+++ b/application/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@thirdweb-dev/contracts": "^3.1.1",
     "@thirdweb-dev/react": "^2.4.3",
     "@thirdweb-dev/sdk": "^2.3.14",
     "ethers": "^5.6.9",
